--- a/client/form-layout.css
+++ b/client/form-layout.css
@@ -17,11 +17,9 @@ body,html,div{
   margin: 0;
   border: 0;
   width: 100%;
-}
-
-body,html{
   height: 100%;
 }
+
 body{
   color: #fff;
 }
@@ -56,9 +54,9 @@ Home Page
 ================
 */
 .home-container{
-   background: #293f50;
-  width: 500px;
-  height: 200px;
+  background: #293f50;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -139,13 +137,17 @@ form
   display: flex;
   flex-direction: row;
   width: 100%;
+  height: auto;
   background-color: #fff;
+  border: 1px solid #808080;
 }
 .search-area,
 .more-search{
-  border: 1px solid #808080;
   color: #0F2346;
   padding-bottom: 20px;
+}
+.more-search{
+  border-left: 1px solid #808080;
 }
 .searching-label{
   display: inline-block;
@@ -178,6 +180,7 @@ Resultant Search
 }
 .searching-elements{
   width: 350px;
+  height: auto;
   margin: 20px auto;
   color: #0F2346;
   background-color: #fff;
@@ -275,6 +278,9 @@ Modular Classes
 }
 .center{
   text-align: center;
+}
+.very-large{
+  font-size: 40px;
 }
 
 
